--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,19 +17,19 @@ services:
     networks:
       - proxy-tier
 
-  # letsencrypt-companion:
-  #   image: nginxproxy/acme-companion
-  #   restart: always
-  #   volumes:
-  #     - certs:/etc/nginx/certs
-  #     - acme:/etc/acme.sh
-  #     - vhost.d:/etc/nginx/vhost.d
-  #     - html:/usr/share/nginx/html
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
-  #   networks:
-  #     - proxy-tier
-  #   depends_on:
-  #     - proxy
+  letsencrypt-companion:
+    image: nginxproxy/acme-companion
+    restart: always
+    volumes:
+      - certs:/etc/nginx/certs
+      - acme:/etc/acme.sh
+      - vhost.d:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - proxy-tier
+    depends_on:
+      - proxy
 
 volumes:
   db:
