--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,67 @@
 version: '3'
 services:
 
-  proxy:
-    build: ./proxy
+  web:
+    build: ./web
     restart: always
+    volumes:
+      - ./web/index.html:/var/www/html/index.html
+    environment:
+      - VIRTUAL_HOST=playlistener.tk
+      - LETSENCRYPT_HOST=playlistener.tk
+    # depends_on:
+    #   - app
+    # networks:
+    #   - proxy-tier
+      # - default
     ports:
-      - 80:80
-      - 443:443
-    labels:
-      com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
-    volumes:
-      - certs:/etc/nginx/certs:ro
-      - vhost.d:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    networks:
-      - proxy-tier
+      - 9000:9000
 
-  letsencrypt-companion:
-    image: nginxproxy/acme-companion
-    restart: always
-    volumes:
-      - certs:/etc/nginx/certs
-      - acme:/etc/acme.sh
-      - vhost.d:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - proxy-tier
-    depends_on:
-      - proxy
+
+  # proxy:
+  #   image: nginx:stable-alpine
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+  #     - ./web/index.html:/var/www/html/index.html
+  #   ports:
+  #     - 9000:9000
+
+    # networks:
+    #   - app-network
+
+  # proxy:
+  #   build: ./proxy
+  #   restart: always
+  #   ports:
+  #     - 80:80
+  #     - 443:443
+  #   labels:
+  #     com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
+  #   volumes:
+  #     - certs:/etc/nginx/certs:ro
+  #     - vhost.d:/etc/nginx/vhost.d
+  #     - html:/usr/share/nginx/html
+  #     - /var/run/docker.sock:/tmp/docker.sock:ro
+  #   networks:
+  #     - proxy-tier
+
+  # letsencrypt-companion:
+  #   image: nginxproxy/acme-companion
+  #   restart: always
+  #   volumes:
+  #     - certs:/etc/nginx/certs
+  #     - acme:/etc/acme.sh
+  #     - vhost.d:/etc/nginx/vhost.d
+  #     - html:/usr/share/nginx/html
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #   networks:
+  #     - proxy-tier
+  #   depends_on:
+  #     - proxy
 
 volumes:
   db:
-  nextcloud:
+  web:
   certs:
   acme:
   vhost.d:
