--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -19,7 +19,7 @@ http {
 
   server {
     listen 80;
-    listen 443 default_server ssl;
+    server_name 127.0.0.1;
 
     client_max_body_size 4G;
     keepalive_timeout 5;
