--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -1,38 +1,68 @@
-worker_processes 1;
+worker_processes auto;
 
-user nobody nogroup;
-# 'user nobody nobody;' for systems with 'nobody' as a group instead
 error_log  /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+pid        /var/run/nginx.pid;
+
 
 events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # set to 'on' if nginx worker_processes > 1
+    worker_connections  1024;
 }
 
+
 http {
-  include mime.types;
-  # fallback in case we can't determine a type
-  default_type application/octet-stream;
-  access_log /var/log/nginx/access.log combined;
-  sendfile on;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-  server {
-    listen 80;
-    server_name 127.0.0.1;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    client_max_body_size 4G;
-    keepalive_timeout 5;
+    access_log  /var/log/nginx/access.log  main;
 
-    access_log  /var/log/nginx/example.log;
-    
-    # path for static files
-    root /var/www/html;
+    sendfile        on;
+    #tcp_nopush     on;
 
-    location / {
-      # checks for static file, if not found proxy to app
-      # autoindex on;
-      try_files $uri $uri/ =404;
+    # Prevent nginx HTTP Server Detection
+    server_tokens   off;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    server {
+        listen 80;
+
+        # set max upload size
+        client_max_body_size 512M;
+        fastcgi_buffers 64 4K;
+
+        # Enable gzip but do not remove ETag headers
+        gzip on;
+        gzip_vary on;
+        gzip_comp_level 4;
+        gzip_min_length 256;
+        gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
+        gzip_types application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
+
+        # HTTP response headers borrowed from Nextcloud `.htaccess`
+        add_header Referrer-Policy                      "no-referrer"   always;
+        add_header X-Content-Type-Options               "nosniff"       always;
+        add_header X-Download-Options                   "noopen"        always;
+        add_header X-Frame-Options                      "SAMEORIGIN"    always;
+        add_header X-Permitted-Cross-Domain-Policies    "none"          always;
+        add_header X-Robots-Tag                         "none"          always;
+        add_header X-XSS-Protection                     "1; mode=block" always;
+
+        # Remove X-Powered-By, which is an information leak
+        fastcgi_hide_header X-Powered-By;
+
+        # Path to the root of your installation
+        root /var/www/html;
+
+        index index.php index.html;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
     }
-  }  
 }
