--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,34 @@
 version: '3'
 services:
 
-  # web:
-  #   build: ./web
-  #   restart: always
-  #   volumes:
-  #     - ./web:/var/www/html:ro
-  #   environment:
-  #     - VIRTUAL_HOST=ggqq.tk
-  #     - LETSENCRYPT_HOST=ggqq.tk
-  #   depends_on:
-  #     - proxy
-  #     - letsencrypt-companion
-  #   networks:
-  #     - proxy-tier
-  #     - default
-
-  # test with grafana
   web:
-    image: grafana/grafana
+    image: nginx:alpine
+    restart: always
+    volumes:
+      - ./html:/usr/share/nginx/html
     environment:
       - VIRTUAL_HOST=ggqq.tk
-      - VIRTUAL_PORT=3000
+      - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=ggqq.tk
+    ports:
+      - 8080:8080
     depends_on:
       - nginx-proxy
       - nginx-proxy-acme
+    # networks:
+    #   - proxy-tier
+    #   - default
+
+  # test with grafana
+  # web:
+  #   image: grafana/grafana
+  #   environment:
+  #     - VIRTUAL_HOST=ggqq.tk
+  #     - VIRTUAL_PORT=3000
+  #     - LETSENCRYPT_HOST=ggqq.tk
+  #   depends_on:
+  #     - nginx-proxy
+  #     - nginx-proxy-acme
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
