--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
 version: '3'
 services:
 
-  # web:
-  #   image: nginx:alpine
-  #   restart: always
-  #   volumes:
-  #     - ./html:/usr/share/nginx/html
-  #   environment:
-  #     - VIRTUAL_HOST=ggqq.tk
-  #     - VIRTUAL_PORT=8080
-  #     - LETSENCRYPT_HOST=ggqq.tk
-  #   ports:
-  #     - 8080:80
-  #   depends_on:
-  #     - nginx-proxy
-  #     - nginx-proxy-acme
+  web:
+    image: nginx:alpine
+    restart: always
+    volumes:
+      - ./html:/usr/share/nginx/html
+    environment:
+      - VIRTUAL_HOST=ggqq.tk
+      - VIRTUAL_PORT=8080
+      - LETSENCRYPT_HOST=ggqq.tk
+    ports:
+      - 8080:80
+    depends_on:
+      - nginx-proxy
+      - nginx-proxy-acme
     # networks:
     #   - proxy-tier
     #   - default
 
   # test with grafana
-  web:
-    image: grafana/grafana
-    environment:
-      - VIRTUAL_HOST=ggqq.tk
-      - VIRTUAL_PORT=3000
-      - LETSENCRYPT_HOST=ggqq.tk
-    depends_on:
-      - nginx-proxy
-      - nginx-proxy-acme
+  # web:
+  #   image: grafana/grafana
+  #   environment:
+  #     - VIRTUAL_HOST=ggqq.tk
+  #     - VIRTUAL_PORT=3000
+  #     - LETSENCRYPT_HOST=ggqq.tk
+  #   depends_on:
+  #     - nginx-proxy
+  #     - nginx-proxy-acme
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
