--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     volumes:
       - ./html:/usr/share/nginx/html
     environment:
-      - VIRTUAL_HOST=ggqq.tk
+      - VIRTUAL_HOST=moog.tk
       - VIRTUAL_PORT=8080
-      - LETSENCRYPT_HOST=ggqq.tk
+      - LETSENCRYPT_HOST=moog.tk
     ports:
       - 8080:80
     depends_on:
