--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3'
 services:
 
-  # web:
-  #   image: nginx:alpine
-  #   restart: always
-  #   volumes:
-  #     - ./html:/usr/share/nginx/html
-  #   environment:
-  #     - VIRTUAL_HOST=moog.tk
-  #     - VIRTUAL_PORT=8080
-  #     - LETSENCRYPT_HOST=moog.tk
+  web:
+    image: nginx:alpine
+    restart: always
+    volumes:
+      - ./html:/usr/share/nginx/html
+    environment:
+      - VIRTUAL_HOST=moog.tk
+      # - VIRTUAL_PORT=8080
+      - LETSENCRYPT_HOST=moog.tk
   #   ports:
   #     - 8080:80
   #   depends_on:
@@ -20,15 +20,15 @@ services:
     #   - default
 
   # test with grafana
-  web:
-    image: grafana/grafana
-    environment:
-      - VIRTUAL_HOST=moog.tk
-      - VIRTUAL_PORT=3000
-      - LETSENCRYPT_HOST=moog.tk
-    depends_on:
-      - nginx-proxy
-      - nginx-proxy-acme
+  # web:
+  #   image: grafana/grafana
+  #   environment:
+  #     - VIRTUAL_HOST=moog.tk
+  #     - VIRTUAL_PORT=3000
+  #     - LETSENCRYPT_HOST=moog.tk
+  #   depends_on:
+  #     - nginx-proxy
+  #     - nginx-proxy-acme
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
