--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
   sendfile on;
 
   server {
-    listen 9000;
+    listen 8080;
     server_name 127.0.0.1;
 
     client_max_body_size 4G;
@@ -27,7 +27,7 @@ http {
     access_log  /var/log/nginx/example.log;
     
     # path for static files
-    root /var/www/html;
+    root /usr/share/nginx/html;
 
     location / {
       # checks for static file, if not found proxy to app
