--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,30 +5,17 @@ services:
     image: nginx:alpine
     restart: always
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./html:/usr/share/nginx/html
     environment:
       - VIRTUAL_HOST=moog.tk
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=moog.tk
-    ports:
-      - 8080:80
-  #   depends_on:
-  #     - nginx-proxy
-  #     - nginx-proxy-acme
-    # networks:
-    #   - proxy-tier
-    #   - default
-
-  # test with grafana
-  # web:
-  #   image: grafana/grafana
-  #   environment:
-  #     - VIRTUAL_HOST=moog.tk
-  #     - VIRTUAL_PORT=3000
-  #     - LETSENCRYPT_HOST=moog.tk
-  #   depends_on:
-  #     - nginx-proxy
-  #     - nginx-proxy-acme
+    # ports:
+    #   - 8080:8080
+    depends_on:
+      - nginx-proxy
+      - nginx-proxy-acme
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
