--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - VIRTUAL_HOST=moog.tk
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=moog.tk
-    # ports:
-    #   - 8080:8080
+    ports:
+      - 8080:8080
     depends_on:
       - nginx-proxy
       - nginx-proxy-acme
