--- a/playlistenerweb/nginx.conf
+++ b/playlistenerweb/nginx.conf
@@ -17,8 +17,12 @@ http {
   access_log /var/log/nginx/access.log combined;
   sendfile on;
 
+  upstream playlistenerbackend {
+    server app:9001;
+  }
+
   server {
-    listen 8080;
+    listen 9000;
     server_name 127.0.0.1;
 
     client_max_body_size 4G;
@@ -32,7 +36,21 @@ http {
     location / {
       # checks for static file, if not found proxy to app
       # autoindex on;
-      try_files $uri $uri/ =404;
+      try_files $uri @proxy_to_app;
     }
+
+    location @proxy_to_app {
+        proxy_pass http://playlistenerbackend;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }    
   }  
 }
