point nginx to correct backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - VIRTUAL_HOST=moog.tk
       - VIRTUAL_PORT=9000
       - LETSENCRYPT_HOST=moog.tk
+    networks:
+      - playlistener-network
+
     depends_on:
       - nginx-proxy
       - nginx-proxy-acme
@@ -28,8 +31,8 @@ services:
       - vhost.d:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
-    # networks:
-    #   - proxy-tier
+    networks:
+      - proxy-tier
 
   nginx-proxy-acme:
     image: nginxproxy/acme-companion
@@ -40,8 +43,8 @@ services:
       - vhost.d:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    # networks:
-    #   - proxy-tier
+    networks:
+      - proxy-tier
     depends_on:
       - nginx-proxy
 
@@ -53,5 +56,5 @@ volumes:
 
   playlistenerwebassets:
 
-# networks:
-#   proxy-tier:
+networks:
+  proxy-tier:
