--- a/playlistenerweb/nginx.conf
+++ b/playlistenerweb/nginx.conf
@@ -18,7 +18,7 @@ http {
   sendfile on;
 
   upstream playlistenerbackend {
-    server app:9001;
+    server playlistenerweb:9001;
   }
 
   server {
