--- a/playlistenerweb/nginx.conf
+++ b/playlistenerweb/nginx.conf
@@ -2,7 +2,7 @@ worker_processes 1;
 
 user nobody nogroup;
 # 'user nobody nobody;' for systems with 'nobody' as a group instead
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nginx/error.log debug;
 pid /var/run/nginx.pid;
 
 events {
