disable upstream for testing

--- a/playlistenerweb/nginx.conf
+++ b/playlistenerweb/nginx.conf
@@ -17,9 +17,9 @@ http {
   access_log /var/log/nginx/access.log combined;
   sendfile on;
 
-  upstream playlistenerbackend {
-    server playlistenerweb:9001;
-  }
+  # upstream playlistenerbackend {
+  #   server playlistenerweb:9001;
+  # }
 
   server {
     listen 9000;
@@ -36,7 +36,8 @@ http {
     location / {
       # checks for static file, if not found proxy to app
       # autoindex on;
-      try_files $uri @proxy_to_app;
+      # try_files $uri @proxy_to_app;
+      try_files $uri $uri/ =404;
     }
 
     location @proxy_to_app {
