temporary disable proxy

--- a/playlistenerweb/nginx.conf
+++ b/playlistenerweb/nginx.conf
@@ -40,18 +40,18 @@ http {
       try_files $uri $uri/ =404;
     }
 
-    location @proxy_to_app {
-        proxy_pass http://playlistenerbackend;
+    # location @proxy_to_app {
+    #     proxy_pass http://playlistenerbackend;
 
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "upgrade";
 
-        proxy_redirect off;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $server_name;
-    }    
+    #     proxy_redirect off;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Host $server_name;
+    # }    
   }  
 }
