--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
       - vhost.d:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
-    networks:
-      - proxy-tier
+    # networks:
+    #   - proxy-tier
 
   nginx-proxy-acme:
     image: nginxproxy/acme-companion
@@ -57,8 +57,8 @@ services:
       - vhost.d:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - proxy-tier
+    # networks:
+    #   - proxy-tier
     depends_on:
       - nginx-proxy
 
