--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     restart: always
     volumes:
       - ./playlistenerweb/nginx.conf:/etc/nginx/nginx.conf:ro
-      # - playlistenerwebassets:/usr/share/nginx/html:ro
-      - ./html/index.html:/usr/share/nginx/html/index.html
+      - playlistenerwebassets:/usr/share/nginx/html:ro
+      # - ./html/index.html:/usr/share/nginx/html/index.html
     environment:
       - VIRTUAL_HOST=moog.tk
       - VIRTUAL_PORT=9000
