--- a/playlistenerweb/nginx.conf
+++ b/playlistenerweb/nginx.conf
@@ -17,9 +17,9 @@ http {
   access_log /var/log/nginx/access.log combined;
   sendfile on;
 
-  # upstream playlistenerbackend {
-  #   server playlistenerweb:9001;
-  # }
+  upstream playlistenerbackend {
+    server playlistenerweb:9001;
+  }
 
   server {
     listen 9000;
@@ -36,22 +36,22 @@ http {
     location / {
       # checks for static file, if not found proxy to app
       # autoindex on;
-      # try_files $uri @proxy_to_app;
-      try_files $uri $uri/ =404;
+      try_files $uri @proxy_to_app;
+      # try_files $uri $uri/ =404;
     }
 
-    # location @proxy_to_app {
-    #     proxy_pass http://playlistenerbackend;
+    location @proxy_to_app {
+        proxy_pass http://playlistenerbackend;
 
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
 
-    #     proxy_redirect off;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Host $server_name;
-    # }    
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }    
   }  
 }
