--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,34 @@
 version: '3'
 services:
 
-  plweb:
-    image: nginx:alpine
-    restart: always
-    volumes:
-      - ./playlistenerweb/nginx.conf:/etc/nginx/nginx.conf:ro
-      - playlistenerwebassets:/usr/share/nginx/html:ro
-    environment:
+  grafana:
+    image: grafana
+    environment:  
       - VIRTUAL_HOST=moog.tk
-      - VIRTUAL_PORT=9000
+      - VIRTUAL_PORT=3000
       - LETSENCRYPT_HOST=moog.tk
     networks:
       - proxy-tier
-      - playlistener-network
     depends_on:
       - nginx-proxy
       - nginx-proxy-acme
+
+  # plweb:
+  #   image: nginx:alpine
+  #   restart: always
+  #   volumes:
+  #     - ./playlistenerweb/nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - playlistenerwebassets:/usr/share/nginx/html:ro
+  #   environment:
+  #     - VIRTUAL_HOST=moog.tk
+  #     - VIRTUAL_PORT=9000
+  #     - LETSENCRYPT_HOST=moog.tk
+  #   networks:
+  #     - proxy-tier
+  #     - playlistener-network
+  #   depends_on:
+  #     - nginx-proxy
+  #     - nginx-proxy-acme
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
