--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
 
   grafana:
-    image: grafana
+    image: grafana/grafana
     environment:  
       - VIRTUAL_HOST=moog.tk
       - VIRTUAL_PORT=3000
