--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -36,7 +36,7 @@ http {
     location / {
       # checks for static file, if not found proxy to app
       # autoindex on;
-      try_files $uri @proxy_to_app;
+      try_files $uri @proxy_to_app =404;
       # try_files $uri $uri/ =404;
     }
 
@@ -47,11 +47,11 @@ http {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
-        proxy_redirect off;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $server_name;
+        # proxy_redirect off;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Host $server_name;
     }    
   }  
 }
