--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -33,25 +33,34 @@ http {
     # path for static files
     root /usr/share/nginx/html;
 
+    # location / {
+    #   # checks for static file, if not found proxy to app
+    #   # autoindex on;
+    #   try_files $uri @proxy_to_app;
+    #   # try_files $uri $uri/ =404;
+    # }
+
+    
     location / {
-      # checks for static file, if not found proxy to app
-      # autoindex on;
-      try_files $uri @proxy_to_app;
-      # try_files $uri $uri/ =404;
+        try_files /maintenance.html $uri $uri/ @maintenance;
+     }
+
+    location @maintenance {
+      return 503;
     }
 
-    location @proxy_to_app {
-        proxy_pass http://playlistenerbackend;
+    # location @proxy_to_app {
+    #     proxy_pass http://playlistenerbackend;
 
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "upgrade";
 
-        # proxy_redirect off;
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Host $server_name;
-    }    
+    #     # proxy_redirect off;
+    #     # proxy_set_header Host $host;
+    #     # proxy_set_header X-Real-IP $remote_addr;
+    #     # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     # proxy_set_header X-Forwarded-Host $server_name;
+    # }    
   }  
 }
