--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     volumes:
       - /plweb/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /plweb/index.html:/usr/share/nginx/html:ro
+      - /plweb/index.html:/usr/share/nginx/html/index.html:ro
       # - playlistenerwebassets:/usr/share/nginx/html:ro
     environment:
       - VIRTUAL_HOST=moog.tk
