--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: nginx:alpine
     restart: always
     volumes:
-      - /plweb/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /plweb/index.html:/usr/share/nginx/html/index.html:ro
+      - ./plweb/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./plweb/index.html:/usr/share/nginx/html/index.html:ro
       # - playlistenerwebassets:/usr/share/nginx/html:ro
     environment:
       - VIRTUAL_HOST=moog.tk
