--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -32,35 +32,38 @@ http {
     
     # path for static files
     root /usr/share/nginx/html;
-
-    # location / {
-    #   # checks for static file, if not found proxy to app
-    #   # autoindex on;
-    #   try_files $uri @proxy_to_app;
-    #   # try_files $uri $uri/ =404;
-    # }
-
-    
+    error_page 503 /503.html;
     location / {
-        try_files /maintenance.html $uri $uri/ @maintenance;
-     }
-
-    location @maintenance {
-      return 503;
+      # checks for static file, if not found proxy to app
+      # autoindex on;
+      try_files $uri @proxy_to_app;
+      # try_files $uri $uri/ =404;
     }
 
-    # location @proxy_to_app {
-    #     proxy_pass http://playlistenerbackend;
+    
+    # location / {
+    #     try_files /maintenance.html $uri $uri/ @maintenance;
+    #  }
 
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
+    # location @maintenance {
+    #   return 503;
+    # }
 
-    #     # proxy_redirect off;
-    #     # proxy_set_header Host $host;
-    #     # proxy_set_header X-Real-IP $remote_addr;
-    #     # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     # proxy_set_header X-Forwarded-Host $server_name;
-    # }    
+    location @proxy_to_app {
+        proxy_pass http://playlistenerbackend;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # proxy_redirect off;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Host $server_name;
+    }   
+    location = /503.html {
+      root /usr/share/nginx/html;
+    } 
   }  
 }
