--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -33,6 +33,8 @@ http {
     # path for static files
     root /usr/share/nginx/html;
     error_page 503 /503.html;
+    error_page 502 /502.html;
+
     location / {
       # checks for static file, if not found proxy to app
       # autoindex on;
@@ -63,6 +65,10 @@ http {
         # proxy_set_header X-Forwarded-Host $server_name;
     }   
     location = /503.html {
+      root /usr/share/nginx/html;
+    } 
+
+    location = /502.html {
       root /usr/share/nginx/html;
     } 
   }  
