--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -38,7 +38,7 @@ http {
     location / {
       # checks for static file, if not found proxy to app
       # autoindex on;
-      try_files $uri @proxy_to_app;
+      try_files $uri $uri/ @proxy_to_app;
       # try_files $uri $uri/ =404;
     }
 
