--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -17,9 +17,9 @@ http {
   access_log /var/log/nginx/access.log combined;
   sendfile on;
 
-  upstream playlistenerbackend {
-    server playlistenerweb:9001;
-  }
+  # upstream playlistenerbackend {
+  #   server playlistenerweb:9001;
+  # }
 
   server {
     listen 9000;
@@ -35,12 +35,12 @@ http {
     error_page 503 /503.html;
     error_page 502 /502.html;
 
-    location / {
-      # checks for static file, if not found proxy to app
-      # autoindex on;
-      try_files $uri $uri/ @proxy_to_app;
-      # try_files $uri $uri/ =404;
-    }
+    # location / {
+    #   # checks for static file, if not found proxy to app
+    #   # autoindex on;
+    #   try_files $uri $uri/ @proxy_to_app;
+    #   # try_files $uri $uri/ =404;
+    # }
 
     
     # location / {
@@ -51,8 +51,8 @@ http {
     #   return 503;
     # }
 
-    location @proxy_to_app {
-        proxy_pass http://playlistenerbackend;
+    location / {
+        proxy_pass http://playlistenerweb:9001;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
