--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -52,6 +52,7 @@ http {
     # }
 
     location / {
+        resolver 127.0.0.1 valid=30s;
         proxy_pass http://playlistenerweb:9001;
 
         proxy_http_version 1.1;
