--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -51,7 +51,7 @@ http {
     #   return 503;
     # }
 
-    location /foo {
+    location / {
         resolver 127.0.0.1 valid=30s;
         set $upstream_foo foo;
         proxy_pass http://$upstream_foo:9001;
