--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -53,8 +53,8 @@ http {
 
     location / {
         resolver 127.0.0.1 valid=30s;
-        set $upstream_foo foo;
-        proxy_pass http://$upstream_foo:9001;
+        set $upstream playlistenerweb;
+        proxy_pass http://$upstream:9001;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
