--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     restart: always
     volumes:
       - ./plweb/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./plweb/503.html:/usr/share/nginx/html/503.html:ro
-      - ./plweb/502.html:/usr/share/nginx/html/502.html:ro  
+      - ./plweb/500:/usr/share/nginx/html:ro  
       # - playlistenerwebassets:/usr/share/nginx/html:ro
     environment:
       - VIRTUAL_HOST=moog.tk
