--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -30,26 +30,7 @@ http {
 
     access_log  /var/log/nginx/example.log;
     
-    # path for static files
     root /usr/share/nginx/html;
-    error_page 503 /503.html;
-    error_page 502 /502.html;
-
-    # location / {
-    #   # checks for static file, if not found proxy to app
-    #   # autoindex on;
-    #   try_files $uri $uri/ @proxy_to_app;
-    #   # try_files $uri $uri/ =404;
-    # }
-
-    
-    # location / {
-    #     try_files /maintenance.html $uri $uri/ @maintenance;
-    #  }
-
-    # location @maintenance {
-    #   return 503;
-    # }
 
     location / {
         resolver 127.0.0.1 valid=30s;
@@ -66,12 +47,12 @@ http {
         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # proxy_set_header X-Forwarded-Host $server_name;
     }   
-    location = /503.html {
-      root /usr/share/nginx/html;
-    } 
 
-    location = /502.html {
+    error_page 500 502 503 504 /500.html;
+
+    location = /500.html {
       root /usr/share/nginx/html;
-    } 
+    }    
+
   }  
 }
