--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -33,7 +33,7 @@ http {
     root /usr/share/nginx/html;
 
     location / {
-        resolver 127.0.0.1 valid=30s;
+        # resolver 127.0.0.1 valid=30s;
         set $upstream playlistenerweb;
         proxy_pass http://$upstream:9001;
 
