--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -32,8 +32,10 @@ http {
     
     root /usr/share/nginx/html;
 
+    resolver 127.0.0.11 valid=10s; 
+    resolver_timeout 5s;
+
     location / {
-        # resolver 127.0.0.1 valid=30s;
         set $upstream playlistenerweb;
         proxy_pass http://$upstream:9001;
 
