add proxy buffers

--- a/plweb/nginx.conf
+++ b/plweb/nginx.conf
@@ -37,16 +37,18 @@ http {
       resolver_timeout 5s;
       set $upstream playlistenerweb;
       proxy_pass http://$upstream:9000;
-
+      
+      proxy_buffers 16 4k;
+      proxy_buffer_size 2k;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
 
-        # proxy_redirect off;
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Host $server_name;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
     }   
 
     error_page 500 502 503 504 /500.html;
